--- a/frontend/src/app/modules/subjects/subjects.component.html
+++ b/frontend/src/app/modules/subjects/subjects.component.html
@@ -1,1 +1,16 @@
-<p>subjects works!</p>
+<p>subjects list</p>
+
+<ul *ngIf="subjects.length > 0; else noData">
+    <li *ngFor="let subject of subjects">
+        {{ subject.code }} - {{ subject.name }} {{ subject.teacherName }} {{ subject.teacherSurname }} (Grade {{
+        subject.grade }})
+    </li>
+</ul>
+
+<ng-template #noData>
+    <p>No subjects found.</p>
+</ng-template>
+
+<button mat-raised-button color="primary" (click)="openAddSubjectDialog()">
+    Add Subject
+</button>
