change table colors

--- a/frontend/src/app/modules/students/students.component.html
+++ b/frontend/src/app/modules/students/students.component.html
@@ -1,5 +1,4 @@
-<p>students list</p>
-
+<h2>Students list</h2>
 
 <button mat-raised-button color="primary" (click)="openAddStudentDialog()">
   Add Student
