--- a/frontend/src/app/modules/subjects/subjects.component.html
+++ b/frontend/src/app/modules/subjects/subjects.component.html
@@ -1,4 +1,4 @@
-<p>subjects list</p>
+<h2>Subjects list</h2>
 
 <button mat-raised-button color="primary" (click)="openAddSubjectDialog()">
     Add Subject
