--- a/frontend/src/app/shared/table/table.component.scss
+++ b/frontend/src/app/shared/table/table.component.scss
@@ -2,8 +2,8 @@
     width: 100%;
     border-collapse: collapse;
     margin-top: 16px;
-    background: white;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+    background: rgb(40, 35, 35);
+    box-shadow: 0 2px 6px rgba(112, 110, 110, 0.05);
     border-radius: 8px;
     overflow: hidden;
 }
@@ -16,17 +16,17 @@
 }
 
 .mat-header-cell {
-    background-color: #f5f5f5;
+    background-color: #0b0202;
     font-weight: 600;
     color: #333;
 }
 
 .mat-row:nth-child(even) .mat-cell {
-    background-color: #fafafa;
+    background-color: #3a3434;
 }
 
 .mat-row:hover .mat-cell {
-    background-color: #f0f0f0;
+    background-color: purple;
 }
 
 @media (max-width: 768px) {
