--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,9 @@
 <nav style="background:gray; padding:10px; margin: 0px;">
-  <a routerLink="/students" routerLinkActive="active" style="margin-right:10px; color:black; text-decoration:none;">Students</a>
-  <a routerLink="/subjects" routerLinkActive="active" style="margin-right:10px; color:black; text-decoration:none;">Subjects</a>
-  <a routerLink="/exams" routerLinkActive="active" style="color:black; text-decoration:none;">Exams</a>
+  <a routerLink="/students" routerLinkActive="active"
+    style="margin-right:10px; color:black; text-decoration:none; font-size:20px;">Students</a>
+  <a routerLink="/subjects" routerLinkActive="active"
+    style="margin-right:10px; color:black; text-decoration:none; font-size:20px;">Subjects</a>
+  <a routerLink="/exams" routerLinkActive="active" style="color:black; text-decoration:none; font-size:20px;">Exams</a>
 </nav>
 
 <div>
